# fenicsx-beat

./: .cspell_dict.txt  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  _config.yml  _toc.yml  cspell.config.yaml  pyproject.toml
.github/workflows/: build_docs.yml  docker-image.yml  main-mpi.yml  main.yml
demos/: biv_endocardial.py  diffusion.py  fitzhughnagumo.py  ischemia.py  lv_endocardial.py  monodomain_convergence.py  niederer_benchmark.py  pace_train.py  pvc.py  slab.py  ukb_atlas.py  verification.py
docs/: api.rst  refs.bib
joss-paper/: paper.bib  paper.md
odes/torord/: ToROR_dynCl_endo_land.ode  ToRORd_dynCl_endo.ode
src/beat/: __init__.py  base_model.py  cli.py  conductivities.py  config.py  ecg.py  geometry.py  irksome_model.py  log.py  monodomain_model.py  monodomain_solver.py  odesolver.py  postprocess.py  runner.py  single_cell.py  stimulation.py  telemetry.py  units.py  utils.py
tests/: README.md  test_cli.py  test_ecg.py  test_irksome_monodomain.py  test_monodomain.py  test_monodomain_solver.py  test_odesolver.py  test_stimulation.py  test_telemetry.py  test_utils.py
