[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "fenicsx-beat"
version = "0.1.1"
description = "Library to run cardiac EP simulations"
authors = [{name = "Henrik Finsberg", email = "henriknf@simula.no"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cardiac", "electrophysiology"]
dependencies = [
    "numpy",
    "scipy",
    "scifem>=0.2.14",
    "pint",
    "rich",
]

[project.scripts]
beat = "beat.cli:main"

[project.urls]
Homepage = "https://finsberg.github.io/fenicsx-beat"
Documentation = "https://finsberg.github.io/fenicsx-beat"
Source = "https://github.com/finsberg/fenicsx-beat"
Tracker = "https://github.com/finsberg/fenicsx-beat/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pre-commit",
]
pypi = [
    "twine",
    "build"
]
demos = [
   "cardiac-geometriesx",
   "fenicsx-ldrb",
   "gotranx",
   "ukb-atlas",
]
docs = [
   "jupyter-book",
   "jupytext",
   "fenicsx-beat[demos]",
   "ipywidgets",
   "imageio",
   "pyvista[jupyter]",
]
all = [
   "fenicsx-beat[test]",
   "fenicsx-beat[docs]",
   "fenicsx-beat[pypi]",
   "fenicsx-beat[dev]",
   "fenicsx-beat[demos]"
]


testpaths = [
    "tests"
]
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "demo/*.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "demos",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.

# Assume Python 3.10.
target-version = "py310"


[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I"]
ignore = ["E402", "E741", "E743", "E731"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ruff.lint.isort]
known-first-party = ["beat"]
known-third-party = [
    "basix",
    "dolfinx",
    "ffcx",
    "ufl",
    "gmsh",
    "numpy",
    "pytest",
]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]
[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]


[tool.bumpversion]
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
current_version = "0.1.1"


[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
